# math214-opengl

./: CMakeLists.txt  README.md  fragment.glsl  geometry.glsl  main.cpp  vertex.glsl
